--- a/css/styles1.css
+++ b/css/styles1.css
@@ -105,7 +105,7 @@ body {
 }
 
 hr {
-  margin: 1rem 0;
+  margin: 0rem 0;
   color: inherit;
   border: 0;
   border-top: 1px solid;
@@ -1291,6 +1291,10 @@ progress {
   .col-lg-6 {
     flex: 0 0 auto;
     width: 50%;
+  }
+  .col-lg-test {
+    flex: 0 0 auto;
+    width: 100%;
   }
   .col-lg-7 {
     flex: 0 0 auto;
@@ -2847,19 +2851,19 @@ textarea.form-control-lg {
 
 .btn-primary {
   --bs-btn-color: #fff;
-  --bs-btn-bg: #ffc800;
-  --bs-btn-border-color: #ffc800;
+  --bs-btn-bg: #fbb7b6;
+  --bs-btn-border-color: #fbb7b6;
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #d9aa00;
-  --bs-btn-hover-border-color: #cca000;
+  --bs-btn-hover-bg: #ff9d9b;
+  --bs-btn-hover-border-color: #ff9d9b;
   --bs-btn-focus-shadow-rgb: 255, 208, 38;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #cca000;
-  --bs-btn-active-border-color: #bf9600;
+  --bs-btn-active-bg: #fb817f;
+  --bs-btn-active-border-color: #fb817f;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #fff;
-  --bs-btn-disabled-bg: #ffc800;
-  --bs-btn-disabled-border-color: #ffc800;
+  --bs-btn-disabled-bg: #fbb7b6;
+  --bs-btn-disabled-border-color: #fbb7b6;
 }
 
 .btn-secondary {
@@ -10839,7 +10843,7 @@ p {
 }
 
 .page-section {
-  padding: 6rem 0;
+  padding: rem 0;
 }
 .page-section h2.section-heading, .page-section .section-heading.h2 {
   font-size: 2.5rem;
@@ -10856,7 +10860,7 @@ p {
 
 @media (min-width: 768px) {
   section {
-    padding: 9rem 0;
+    padding: 5rem 0;
   }
 }
 .btn-xl {
@@ -11005,7 +11009,8 @@ header.masthead .masthead-heading {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: rgba(255, 200, 0, 0.9);
+  #background: rgba(255, 200, 0, 0.9);
+  background: rgba(223, 221, 213, 0.9);
   align-items: center;
   justify-content: center;
   opacity: 0;
